[package]
name = "mbm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = {version = "1.16.0"} 

serialport = {version = "4.2.2"} 

chrono = "0.4"
datetime = "0.5.2"

ansi_term = "0.12"
clap = { version = "4.4.3", features = ["derive"] }

serde_json = {version="1.0.99"}
serde = {version="1.0.99", features=["derive"]}
